[package]
name = "rasp"
version = "0.1.0"
authors = ["anyone"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal = "*"
futures = "*"
tokio = {version="*",features=["full"]}
log = "*"
simplelog="*"
serialport = "4.0.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rumqtt = "*"
chrono = "0.4.13"
rand = "*"
reqwest={version = "*",features=["blocking", "json"] }
structopt = "0.3.25"
